--- a/app/src/main/res/layout/activity_view_products.xml
+++ b/app/src/main/res/layout/activity_view_products.xml
@@ -56,11 +56,21 @@
 
     <!--Add recyclerview here to get data from API-->
 
+    <CheckBox
+        android:id="@+id/checkboxHomeLoan"
+        app:layout_constraintEnd_toStartOf="@id/txtHomeLoan"
+        app:layout_constraintTop_toTopOf="@id/txtHomeLoan"
+        app:layout_constraintBottom_toBottomOf="@id/txtHomeLoan"
+        android:layout_marginEnd="@dimen/_5sdp"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"/>
+
+
     <TextView
         android:id="@+id/txtHomeLoan"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        android:layout_marginStart="@dimen/_30sdp"
+        android:layout_marginStart="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_30sdp"
         android:text="Home Loan"
         android:textStyle="bold"
@@ -79,11 +89,20 @@
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_height="@dimen/_2sdp"/>
 
+    <CheckBox
+        android:id="@+id/checkboxPersonalLoan"
+        app:layout_constraintEnd_toStartOf="@id/txtPersonalLoan"
+        app:layout_constraintTop_toTopOf="@id/txtPersonalLoan"
+        app:layout_constraintBottom_toBottomOf="@id/txtPersonalLoan"
+        android:layout_marginEnd="@dimen/_5sdp"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"/>
+
     <TextView
         android:id="@+id/txtPersonalLoan"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtHomeLoan"
-        android:layout_marginStart="@dimen/_30sdp"
+        android:layout_marginStart="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_30sdp"
         android:text="Personal Loan"
         android:textStyle="bold"
@@ -102,12 +121,21 @@
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_height="@dimen/_2sdp"/>
 
+    <CheckBox
+        android:id="@+id/checkboxVehicleLoan"
+        app:layout_constraintEnd_toStartOf="@id/txtVehicleLoan"
+        app:layout_constraintTop_toTopOf="@id/txtVehicleLoan"
+        app:layout_constraintBottom_toBottomOf="@id/txtVehicleLoan"
+        android:layout_marginEnd="@dimen/_5sdp"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"/>
+
 
     <TextView
         android:id="@+id/txtVehicleLoan"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtPersonalLoan"
-        android:layout_marginStart="@dimen/_30sdp"
+        android:layout_marginStart="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_30sdp"
         android:text="Vehicle Loan"
         android:textStyle="bold"
@@ -126,12 +154,20 @@
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_height="@dimen/_2sdp"/>
 
+    <CheckBox
+        android:id="@+id/checkboxGoldLoan"
+        app:layout_constraintEnd_toStartOf="@id/txtGoldLoan"
+        app:layout_constraintTop_toTopOf="@id/txtGoldLoan"
+        app:layout_constraintBottom_toBottomOf="@id/txtGoldLoan"
+        android:layout_marginEnd="@dimen/_5sdp"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"/>
 
     <TextView
         android:id="@+id/txtGoldLoan"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtVehicleLoan"
-        android:layout_marginStart="@dimen/_30sdp"
+        android:layout_marginStart="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_30sdp"
         android:text="Gold Loan"
         android:textStyle="bold"
@@ -150,19 +186,98 @@
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_height="@dimen/_2sdp"/>
 
-    <Button
-        android:id="@+id/btnSkipAndProceed"
-        style="@style/CustomButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/_45sdp"
-        android:backgroundTint="@color/green"
-        android:text="@string/skip_and_proceed"
-        android:textStyle="normal"
-        android:layout_marginTop="@dimen/_40sdp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clSecondHalf"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:paddingBottom="@dimen/_30sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtGoldLoan" />
+        >
 
+
+        <ImageView
+            android:id="@+id/ivNotesIcon"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:src="@drawable/icons8notepad65ver4"
+            android:visibility="visible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/ivHistory"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:src="@drawable/history"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <Button
+            android:id="@+id/btnInterestedAndELigible"
+            style="@style/CustomButtonStyle"
+            android:layout_width="@dimen/_136sdp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:backgroundTint="@color/green"
+            android:text="@string/interested_and_eligible"
+            android:textStyle="normal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/btnInterestedNotEligible" />
+
+
+        <Button
+            android:id="@+id/btnInterestedNotEligible"
+            style="@style/CustomButtonStyle"
+            android:layout_width="@dimen/_136sdp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:backgroundTint="@color/brightOrange"
+            android:text="@string/interested_not_eligible"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ivHistory" />
+
+
+        <Button
+            android:id="@+id/btnNotInterested"
+            style="@style/CustomButtonStyle"
+            android:layout_width="@dimen/_136sdp"
+            android:layout_height="@dimen/_45sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:backgroundTint="@color/barnRed"
+            android:text="Not Interested"
+            android:textStyle="normal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnInterestedAndELigible" />
+
+
+        <Button
+            android:id="@+id/btnOthers"
+            style="@style/CustomButtonStyle"
+            android:layout_width="@dimen/_136sdp"
+            android:layout_height="@dimen/_45sdp"
+            android:backgroundTint="@color/grey"
+            android:text="@string/others"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="@id/btnInterestedNotEligible"
+            app:layout_constraintStart_toStartOf="@id/btnInterestedNotEligible"
+            app:layout_constraintTop_toBottomOf="@id/btnInterestedNotEligible"
+            app:layout_constraintTop_toTopOf="@id/btnNotInterested" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
