--- a/app/src/main/res/layout/activity_call_status.xml
+++ b/app/src/main/res/layout/activity_call_status.xml
@@ -151,9 +151,9 @@
 
                     <ImageView
                         android:id="@+id/ivPreApprovedOffer"
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
-                        android:src="@drawable/offer_icon2"
+                        android:layout_width="@dimen/_30sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:src="@drawable/offer_icon3"
                         app:layout_constraintBottom_toTopOf="@id/labelPreApprovedOffer"
                         app:layout_constraintEnd_toEndOf="@id/labelPreApprovedOffer"
                         app:layout_constraintStart_toStartOf="@+id/labelPreApprovedOffer" />
@@ -188,8 +188,7 @@
                     android:textSize="@dimen/_13ssp"
                     android:textStyle="bold"
                     android:visibility="invisible"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/labelCreditCardOfferDetails"
                     app:layout_constraintTop_toBottomOf="@id/clPreApprovedOffer" />
 
                 <TextView
@@ -217,8 +216,7 @@
                     android:textSize="@dimen/_13ssp"
                     android:textStyle="bold"
                     android:visibility="gone"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/labelCreditCardOfferDetails"
                     app:layout_constraintTop_toBottomOf="@id/labelCreditCardOfferDetails" />
 
                 <TextView
@@ -231,8 +229,7 @@
                     android:textSize="@dimen/_12ssp"
                     android:textStyle="normal"
                     android:visibility="gone"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/labelCreditCardOfferDetails"
                     app:layout_constraintTop_toBottomOf="@id/labelPersonalLoan" />
 
 
@@ -267,9 +264,9 @@
 
                     <ImageView
                         android:id="@+id/ivViewOtherOffer"
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
-                        android:src="@drawable/offer_icon2"
+                        android:layout_width="@dimen/_30sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:src="@drawable/offer_icon3"
                         app:layout_constraintBottom_toTopOf="@id/labelViewOtherOffer"
                         app:layout_constraintEnd_toEndOf="@id/labelViewOtherOffer"
                         app:layout_constraintStart_toStartOf="@+id/labelViewOtherOffer" />
@@ -291,6 +288,45 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <ImageView
+                    android:id="@+id/ivNotesIcon"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:src="@drawable/icons8notepad65ver4"
+                    android:visibility="visible"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@id/clViewOtherOffer" />
+
+                <ImageView
+                    android:id="@+id/ivHistory"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:src="@drawable/history"
+                    android:visibility="visible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/ivNotesIcon" />
+
+
+                <TextView
+                    android:id="@+id/txtSir_Madam"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:text="@string/sir_madam"
+                    android:textSize="@dimen/_13ssp"
+                    android:textStyle="bold|italic"
+                    android:visibility="invisible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/clViewOtherOffer" />
+
+
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -301,48 +337,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_5sdp"
-            android:paddingBottom="@dimen/_10sdp"
+            android:paddingBottom="@dimen/_30sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-
-            <ImageView
-                android:id="@+id/ivNotesIcon"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:src="@drawable/icons8notepad65ver4"
-                android:visibility="visible"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/ivHistory"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:src="@drawable/history"
-                android:visibility="visible"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/ivNotesIcon" />
-
-
-            <TextView
-                android:id="@+id/txtSir_Madam"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text="@string/sir_madam"
-                android:textSize="@dimen/_13ssp"
-                android:textStyle="bold|italic"
-                android:visibility="invisible"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/ivNotesIcon" />
 
 
             <!--Only for Test purpose to move to next Activity without Call-->
@@ -350,11 +349,11 @@
                 android:id="@+id/ivWifiCall2"
                 android:layout_width="@dimen/_80sdp"
                 android:layout_height="@dimen/_100sdp"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:src="@drawable/phonecall"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txtSir_Madam" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
 
             <!--To make Actual Call-->
@@ -362,12 +361,12 @@
                 android:id="@+id/ivWifiCall"
                 android:layout_width="@dimen/_80sdp"
                 android:layout_height="@dimen/_100sdp"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:src="@drawable/phonecall"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txtSir_Madam" />
+               app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
